[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib==1.2.0",
    "matplotlib==3.7.1",
    "numpy==1.24.3",
    "plotly>=6.0.1",
    "seaborn==0.12.2",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.44.1",
    "pillow>=11.2.1",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "xgboost==1.6.2",
    "fpdf>=1.7.2",
    "statsmodels>=0.14.4",
]
